--- a/main.html
+++ b/main.html
@@ -24,8 +24,8 @@
         <input type="number" id="block_id" min="1" max="9">
         <label for="colour_id">Color:</label>
         <input type="text" id="colour_id" placeholder="e.g., red, #ff0000">
-        <button id="change_button">Change Color</button>
-        <button id="reset_button">Reset</button>
+        <button id="change">Change Color</button>
+        <button id="reset">Reset</button>
     </div>
     <script type="text/javascript" src="./script.js">
 </script>
